[package]
name = "split"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dinvoke = { path = "dinvoke" }
bindings = { path = "bindings" }
data = { path = "data" }
hex = "*"
litcrypt = "0.3"

[build-dependencies]
static_vcruntime = "2.0"